tests/NormalTests/paczka1/fuzzy1/97334436.err
Error in line 19: wjeBqRAC S370 28,5
Error in line 28: wlTTwigNlN S370 76,9
